[gd_scene load_steps=13 format=2]

[ext_resource path="res://player/player_frames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://player/particle.png" type="Texture" id=3]
[ext_resource path="res://player/hit.wav" type="AudioStream" id=4]
[ext_resource path="res://player/jump.wav" type="AudioStream" id=5]
[ext_resource path="res://player/voidnoize.wav" type="AudioStream" id=6]
[ext_resource path="res://player/PlayerCamera.tscn" type="PackedScene" id=7]
[ext_resource path="res://player/die.wav" type="AudioStream" id=8]
[ext_resource path="res://player/B U M M E R.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 3 )

[sub_resource type="Curve" id=2]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 360 ), 0.0, -899.377, 0, 0, Vector2( 1, -360 ), -856.548, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.522484, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="GFX" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "idle"
playing = true

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="Camera2D" parent="." instance=ExtResource( 7 )]
limit_left = -100000
limit_top = -1000000
limit_right = 1000000
limit_bottom = 1000000
drag_margin_top = 0.72
drag_margin_bottom = 0.56

[node name="FloorCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 7 )

[node name="ControlSpell" type="CPUParticles2D" parent="."]
emitting = false
amount = 200
texture = ExtResource( 3 )
emission_shape = 1
emission_sphere_radius = 0.31
spread = 4.35
gravity = Vector2( 0, 0 )
initial_velocity = 344.09
initial_velocity_random = 0.25
angle = 54.2
angle_random = 1.0

[node name="Audio" type="Node2D" parent="."]

[node name="Hit" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 4 )
bus = "SFX"

[node name="Jump" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 5 )
volume_db = -9.088
bus = "SFX"

[node name="Spell" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 6 )
volume_db = -17.116
bus = "SFX"

[node name="Die" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 8 )
bus = "SFX"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="BUMMER" type="CPUParticles2D" parent="."]
emitting = false
amount = 4
one_shot = true
explosiveness = 0.9
local_coords = false
texture = ExtResource( 9 )
direction = Vector2( 0, -1 )
initial_velocity = 53.71
tangential_accel = 16.48
angle = 100.8
angle_random = 1.0
angle_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
